--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/icons-material": "^6.4.5",
 		"@mui/material": "^6.4.5",
+		"js-cookie": "^3.0.5",
 		"next": "15.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
@@ -25,6 +26,7 @@
 		"@cloudflare/next-on-pages": "^1.13.8",
 		"@cloudflare/workers-types": "^4.20250214.0",
 		"@eslint/eslintrc": "^3",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
