--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "my-next-app",
+	"name": "drip-recipes",
 	"compatibility_date": "2025-02-14",
 	"compatibility_flags": [
 		"nodejs_compat"
