--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@mui/icons-material": "^6.4.5",
 		"@mui/material": "^6.4.5",
 		"js-cookie": "^3.0.5",
-		"next": "15.1.6",
+		"next": "^15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
