--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"js-cookie": "^3.0.5",
 		"next": "^15.1.7",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-lottie-player": "^2.1.0"
 	},
 	"devDependencies": {
 		"@cloudflare/next-on-pages": "^1.13.8",
